--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@tailwindcss/ui": "^0.7.2",
+    "flickity": "^2.2.2",
     "postcss": "^8.2.4",
     "sirv-cli": "^1.0.0"
   }
