--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/ui": "^0.7.2",
     "flickity": "^2.2.2",
     "postcss": "^8.2.4",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte-routing": "^1.5.0"
   }
 }
