--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv public"
+    "dev": "rollup -c -w ",
+    "start": "sirv public --host 192.168.0.109"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
